--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/index.js",
-            "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+            "dest": "/index.js"
         }
-    ],
-    "env": {
-        "NODE_ENV": "production"
-    }
+    ]
 }
